image and script paths changed from absolute to relative

--- a/css/advantages.less
+++ b/css/advantages.less
@@ -27,7 +27,7 @@
         .plate-img{
             width: 47px;
             height: 41px;
-            background-image: url(/image/advantages_sprite.png);
+            background-image: url(../image/advantages_sprite.png);
             margin: 0 auto 17px;
             transition: 0.1s linear all;
             z-index: 1;
