--- a/css/slider.less
+++ b/css/slider.less
@@ -74,20 +74,20 @@
 }
 
 .fotorama__arr--prev{
-    background-image: url(/image/arr-left.png) !important;
+    background-image: url(../image/arr-left.png) !important;
     width: 15px !important;
     height: 80px !important;
     margin-top: -40px !important;
     margin-left: 20px;
     opacity: 1 !important;
     @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 2dppx){
-        background-image: url(/image/arr-left.png) !important;
+        background-image: url(../image/arr-left.png) !important;
         background-size: 100% !important;
     }
 }
 
 .fotorama__arr--next{
-    background-image: url(/image/arr-right.png) !important;
+    background-image: url(../image/arr-right.png) !important;
     width: 15px !important;
     height: 80px !important;
     margin-top: -40px !important;
@@ -95,7 +95,7 @@
     margin-right: 20px;
     opacity: 1 !important;
     @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 2dppx){
-        background-image: url(/image/arr-right.png) !important;
+        background-image: url(../image/arr-right.png) !important;
         background-size: 100% !important;
     }
 }
