--- a/css/slider.css
+++ b/css/slider.css
@@ -73,7 +73,7 @@
   opacity: 0.5;
 }
 .fotorama__arr--prev {
-  background-image: url(/image/arr-left.png) !important;
+  background-image: url(../image/arr-left.png) !important;
   width: 15px !important;
   height: 80px !important;
   margin-top: -40px !important;
@@ -82,12 +82,12 @@
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 2dppx) {
   .fotorama__arr--prev {
-    background-image: url(/image/arr-left.png) !important;
+    background-image: url(../image/arr-left.png) !important;
     background-size: 100% !important;
   }
 }
 .fotorama__arr--next {
-  background-image: url(/image/arr-right.png) !important;
+  background-image: url(../image/arr-right.png) !important;
   width: 15px !important;
   height: 80px !important;
   margin-top: -40px !important;
@@ -97,7 +97,7 @@
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 2dppx) {
   .fotorama__arr--next {
-    background-image: url(/image/arr-right.png) !important;
+    background-image: url(../image/arr-right.png) !important;
     background-size: 100% !important;
   }
 }
