--- a/css/style.css
+++ b/css/style.css
@@ -374,7 +374,7 @@ header {
   opacity: 0.5;
 }
 .fotorama__arr--prev {
-  background-image: url(/image/arr-left.png) !important;
+  background-image: url(../image/arr-left.png) !important;
   width: 15px !important;
   height: 80px !important;
   margin-top: -40px !important;
@@ -383,12 +383,12 @@ header {
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 2dppx) {
   .fotorama__arr--prev {
-    background-image: url(/image/arr-left.png) !important;
+    background-image: url(../image/arr-left.png) !important;
     background-size: 100% !important;
   }
 }
 .fotorama__arr--next {
-  background-image: url(/image/arr-right.png) !important;
+  background-image: url(../image/arr-right.png) !important;
   width: 15px !important;
   height: 80px !important;
   margin-top: -40px !important;
@@ -398,7 +398,7 @@ header {
 }
 @media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 2dppx) {
   .fotorama__arr--next {
-    background-image: url(/image/arr-right.png) !important;
+    background-image: url(../image/arr-right.png) !important;
     background-size: 100% !important;
   }
 }
@@ -430,7 +430,7 @@ header {
 .advantages .plate .plate-img {
   width: 47px;
   height: 41px;
-  background-image: url(/image/advantages_sprite.png);
+  background-image: url(../image/advantages_sprite.png);
   margin: 0 auto 17px;
   transition: 0.1s linear all;
   z-index: 1;
