fixed broken fonts and vendor styles

--- a/css/style.less
+++ b/css/style.less
@@ -1,18 +1,18 @@
 @font-face {
     font-family: 'Open Sans Condensed';
-    src: local('Open Sans Cond Light'), local('OpenSans-CondensedLight'), url('https://64424.selcdn.ru/webfonts/osanscondensed/300.woff2') format('woff2'), url('https://64424.selcdn.ru/webfonts/osanscondensed/300.woff') format('woff');
+    src: local('Open Sans Cond Light'), local('OpenSans-CondensedLight'), url('../fonts/osanscondensed/300.woff2') format('woff2'), url('../fonts/osanscondensed/300.woff') format('woff');
     font-weight: 300;
     font-style: normal;
 }
 @font-face {
     font-family: 'Open Sans Condensed';
-    src: local('Open Sans Cond Light Italic'), local('OpenSans-CondensedLightItalic'), url('https://64424.selcdn.ru/webfonts/osanscondensed/300i.woff2') format('woff2'), url('https://64424.selcdn.ru/webfonts/osanscondensed/300i.woff') format('woff');
+    src: local('Open Sans Cond Light Italic'), local('OpenSans-CondensedLightItalic'), url('../fonts/osanscondensed/300i.woff2') format('woff2'), url('../fonts/osanscondensed/300i.woff') format('woff');
     font-weight: 300;
     font-style: italic;
 }
 @font-face {
     font-family: 'Open Sans Condensed';
-    src: local('Open Sans Condensed Bold'), local('OpenSans-CondensedBold'), url('https://64424.selcdn.ru/webfonts/osanscondensed/700.woff2') format('woff2'), url('https://64424.selcdn.ru/webfonts/osanscondensed/700.woff') format('woff');
+    src: local('Open Sans Condensed Bold'), local('OpenSans-CondensedBold'), url('../fonts/osanscondensed/700.woff2') format('woff2'), url('../fonts/osanscondensed/700.woff') format('woff');
     font-weight: 700;
     font-style: normal;
 }
